testdata/baselines/reference/submodule/compiler/jsdocIllegalTags.errors.txt
/a.js(1,10): error TS8004: Type parameter declarations can only be used in TypeScript files.
/a.js(2,9): error TS1092: Type parameters cannot appear on a constructor declaration.
/a.js(6,18): error TS1093: Type annotation cannot appear on a constructor declaration.


==== /a.js (3 errors) ====
    class C {
             
        /** @template T */
    ~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~~~~~~~~
!!! error TS1092: Type parameters cannot appear on a constructor declaration.
        constructor() { }
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    }
    class D {
        /** @return {number} */
                     ~~~~~~
!!! error TS1093: Type annotation cannot appear on a constructor declaration.
        constructor() {}
    }
    